[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
derive_more = { version = "2.0.1", features = ["display"] }
eyre = "0.6.12"
futures-concurrency = "7.6.3"
httparse = "1.10.1"
reqwest = { version = "0.12.14", features = ["stream"] }
tap = "1.0.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = "0.3.19"
